--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -246,12 +247,12 @@
     <div class="container active">
       <div class="user signinBx">
         <div class="imgBx">
-          <img src="https://raw.githubusercontent.com/WoojinFive/CSS_Playground/master/Responsive%20Login%20and%20Registration%20Form/img1.jpg" alt="" />
+          <img src="https://i.ibb.co/bN2dHsK/ph-1.png" alt="" />
         </div>
         <div class="formBx">
           <form action="" onsubmit="return false;">
             <div class="logo">
-              <img src="https://i.ibb.co/QFbpsBL/image.png" alt="Logo">
+              <img src="https://i.ibb.co/XxpD73d/logo-1.png" alt="Logo">
             </div>
             <h1>Starta Institute Sign In</h1>
             <br>
@@ -273,7 +274,7 @@
         <div class="formBx">
           <form action="" onsubmit="return false;">
             <div class="logo">
-              <img src="https://i.ibb.co/QFbpsBL/image.png" alt="Logo">
+              <img src="https://i.ibb.co/XxpD73d/logo-1.png" alt="Logo">
             </div>
             <h2>Starta Institute Regsstration</h2>
             <br>
@@ -354,7 +355,7 @@
           </form>
         </div>
         <div class="imgBx">
-          <img src="https://raw.githubusercontent.com/WoojinFive/CSS_Playground/master/Responsive%20Login%20and%20Registration%20Form/img2.jpg" alt="" />
+          <img src="https://i.ibb.co/Bcx5h6d/ph-2.png" alt="" />
         </div>
       </div>
     </div>
